--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babylonjs/core": "4.2.0",
+    "@babylonjs/gui": "4.2.0",
+    "@babylonjs/loaders": "4.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-babylonjs": "3.0.26",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
